# lk

./: .gitignore  BUILD.gn  README.md  run_bash_command.py
app/: BUILD.gn
app/inetsrv/: BUILD.gn
app/shell/: BUILD.gn
app/stringtests/: BUILD.gn
app/tests/: BUILD.gn
arch/arm64/: BUILD.gn
arch/x86/: BUILD.gn
dev/: BUILD.gn
dev/interrupt/arm_gic/: BUILD.gn
dev/timer/arm_generic/: BUILD.gn
dev/virtio/: BUILD.gn
dev/virtio/block/: BUILD.gn
dev/virtio/gpu/: BUILD.gn
dev/virtio/net/: BUILD.gn
kernel/: BUILD.gn
kernel/novm/: BUILD.gn
kernel/vm/: BUILD.gn
lib/bcache/: BUILD.gn
lib/bio/: BUILD.gn
lib/cbuf/: BUILD.gn
lib/console/: BUILD.gn
lib/debug/: BUILD.gn
lib/debugcommands/: BUILD.gn
lib/fixed_point/: BUILD.gn
lib/fs/: BUILD.gn
lib/fs/ext2/: BUILD.gn
lib/fs/fat32/: BUILD.gn
lib/fs/memfs/: BUILD.gn
lib/fs/spifs/: BUILD.gn
lib/fs/spifs/test/: BUILD.gn
lib/gfx/: BUILD.gn
lib/heap/: BUILD.gn
lib/heap/miniheap/: BUILD.gn
lib/io/: BUILD.gn
lib/iovec/: BUILD.gn
lib/libc/: BUILD.gn
lib/libc/string/: BUILD.gn
lib/minip/: BUILD.gn
lib/pool/: BUILD.gn
lib/tftp/: BUILD.gn
lib/version/: BUILD.gn  buildid.py  buildid.sh
platform/: BUILD.gn
platform/pc/: BUILD.gn
platform/qemu-virt/: BUILD.gn
project/: BUILD.gn
project/virtual/: BUILD.gn
scripts/: download-gn.sh
top/: BUILD.gn
