import("//build/config.gni")

source_set("kernel") {
  include_dirs = [
    "//lib/heap/include",
    "//lib/io/include",
    "//lib/libc/include",
  ]
  sources = [
    "debug.c",
    "event.c",
    "init.c",
    "mutex.c",
    "thread.c",
    "timer.c",
    "semaphore.c",
    "mp.c",
    "port.c",
  ]
  deps = [
    "//lib/debug",
    "//lib/console",
    "//lib/heap",
    "//lib/libc",
  ]
  if (with_kernel_vm) {
    deps += [ "//kernel/vm" ]
  } else {
    deps += [ "//kernel/novm" ]
  }
}
