config("bio_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

source_set("bio") {
  all_dependent_configs = [ ":bio_config" ]
  include_dirs = [
    "include",
    "//lib/heap/include",
    "//lib/io/include",
    "//lib/libc/include",
  ]
  cflags = [
    "-Wno-sign-compare",
  ]
  sources = [
    "bio.c",
    "debug.c",
    "mem.c",
    "subdev.c",
  ]
  deps = [
    "//lib/console",
  ]
}
