config("cbuf_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

source_set("cbuf") {
  all_dependent_configs = [ ":cbuf_config" ]
  include_dirs = [
    "//lib/cbuf/include",
    "//lib/heap/include",
    "//lib/io/include",
    "//lib/libc/include",
  ]
  sources = [
    "cbuf.c",
  ]
}
