config("console_config") {
  visibility = [ ":*" ]
  ldflags = [ "-T" + rebase_path("console.ld", root_out_dir) ]
}

source_set("console") {
  all_dependent_configs = [ ":console_config" ]
  include_dirs = [
    "//include",
    "//lib/heap/include",
    "//lib/io/include",
    "//lib/libc/include",
  ]
  defines = [ "WITH_LIB_CONSOLE" ]
  sources = [
    "console.c",
  ]
}
