config("libc_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//lib/libc/include",
  ]
}

source_set("libc") {
  all_dependent_configs = [ ":libc_config" ]
  sources = [
    "atoi.c",
    "bsearch.c",
    "ctype.c",
    "errno.c",
    "printf.c",
    "rand.c",
    "strtol.c",
    "strtoll.c",
    "stdio.c",
    "qsort.c",
    "eabi.c",
    "atexit.c",
    "pure_virtual.cpp",
  ]
  deps = [
    "//lib/heap",
    "//lib/io",
  ]
}
