action("generate_buildid") {
  script = "buildid.sh"
  outputs = [
    "${target_gen_dir}/buildid.h",
  ]
  args = [ rebase_path("${target_gen_dir}/buildid.h") ]
}

source_set("version") {
  include_dirs = [
    "//lib/io/include",
    "//lib/libc/include",
    "//lib/version/include",
    target_gen_dir,
  ]
  sources = [
    "version.c",
  ]
  deps = [
    ":generate_buildid",
    "//lib/console",
  ]

  # TODO: generate build id
}
