source_set("pc") {
  sources = [
    "interrupts.c",
    "platform.c",
    "timer.c",
    "debug.c",
    "console.c",
    "keyboard.c",
    "pci.c",
    "ide.c",
    "uart.c",
  ]

  include_dirs = [
    "include",
    "//lib/heap/include",
    "//lib/io/include",
    "//lib/libc/include",
  ]

  deps = [
    "//lib/cbuf",
  ]
}
