config("miniheap_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
  defines = [ "WITH_LIB_HEAP_MINIHEAP" ]
}

source_set("miniheap") {
  all_dependent_configs = [ ":miniheap_config" ]
  include_dirs = [
    "//lib/heap/include",
    "//lib/io/include",
    "//lib/libc/include",
  ]
  sources = [
    "miniheap.c",
  ]
}
